--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: Samuel Idaewor
+logo: /assets/img/Edit.jpg
+description: I am building expertise in data science based on my Software Engineering experience.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
